syntax="proto3";

option  go_package = ".;communityPb";

service community{
  rpc CreateCommunity(CreateCommunityRequest)returns(EmptyCommunityResponse);
  rpc GetCommunityList(EmptyCommunityRequest)returns(GetCommunityListResponse);
  rpc ShowCommunity(ShowCommunityRequest)returns(ShowCommunityResponse);
  rpc GetCommunityInfo(GetCommunityInfoRequest)returns(GetCommunityInfoResponse);
}


message CreateCommunityRequest{
  string CommunityName=1;
  string Description=2;
  int64  LeaderId=3;
}


message EmptyCommunityRequest{

}
message EmptyCommunityResponse{
}

message GetCommunityListResponse{
  repeated  Community Communitys=1;
}

message Community{
  int64  CommunityId=1;
  string CommunityName=2;
  string Img=3;
}


message ShowCommunityRequest{
   int64  CommunityId=1;
}

message ShowCommunityResponse{
}


message GetCommunityInfoRequest{
  int64 CommunityId=1;
}

message GetCommunityInfoResponse{
   CommunityInfo Community=1;
}

message CommunityInfo{
  string CommunityName=1;
  string  CommunityImg=2;
  string  Description=3;
  int64   member=4;
  string  LeaderName=5;
  string  LeaderImg=6;
}









